RESOLVED FIXED231206
REGRESSION (r283335): Momentum scrolling is no longer locked to an axis
https://bugs.webkit.org/show_bug.cgi?id=231206
Summary REGRESSION (r283335): Momentum scrolling is no longer locked to an axis
Simon Fraser (smfr)
Reported 2021-10-04 18:51:07 PDT
After r283335, the momentum part of a scroll is no longer axis-locked, causing drifty scrolling.
Attachments
Patch (7.77 KB, patch)
2021-10-04 20:29 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2021-10-04 20:29:00 PDT
EWS
Comment 2 2021-10-05 09:57:35 PDT
Committed r283555 (242520@main): <https://commits.webkit.org/242520@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 440150 [details].
Radar WebKit Bug Importer
Comment 3 2021-10-05 09:58:17 PDT
Note You need to log in before you can comment on or make changes to this bug.