REGRESSION (r283335): Momentum scrolling is no longer locked to an axis https://bugs.webkit.org/show_bug.cgi?id=231206

Reviewed by Wenson Hsieh.

Source/WebCore:

r283335 removed the line that constrained the scroll delta to an axis, so restore it.

This bug only manifested during the momentum phase because both EventDispatcher and
EventHandler send only non-momentum events through the filter. We should also filter
deltas on momentum events (webkit.org/b/231207).

Test: fast/scrolling/mac/momentum-axis-locking.html

* platform/mac/ScrollingEffectsController.mm:
(WebCore::ScrollingEffectsController::handleWheelEvent):

LayoutTests:

* fast/scrolling/mac/momentum-axis-locking-expected.txt: Added.
* fast/scrolling/mac/momentum-axis-locking.html: Added.


Canonical link: https://commits.webkit.org/242520@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283555 268f45cc-cd09-0410-ab3c-d52691b4dbfc